--- a/views/posts/index.erb
+++ b/views/posts/index.erb
@@ -1,8 +1,8 @@
 <ul>
 <% @posts.each do |post| %>
-  <li>
-    <h4><a href="/posts/<%= post.id %>"</a><%= post.title %></h4>
-    <p>Created: <%= post.created_at %></p>
-  </li>
+ <li>
+   <h4><a href="/posts/<%= post.id %>"><%=h post.title %></a></h4>
+   <p>Created: <%=h post.created_at %></p>
+ </li>
 <% end %>
 </ul>
